--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "long url to short url",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/index.js"
   },
   "author": "Prateek Kumar",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mongoose": "^6.3.3",
     "nodemon": "^2.0.16",
+    "redis": "^3.1.2",
     "shortid": "^2.2.16",
     "valid-url": "^1.0.9"
   }
